@startuml

'graph -> edge_list
'graph -> node_list
'node_list --> node
'edge_list --> edge
'algo --> graph

graph --> algo
edge -> graph
edge --> edge_list
node -> graph


class graph{
p_node n_root;
p_node n_tail;
int node_size;
int edge_size;
graph *init_graph(int n);
int add_new_node(graph *g, int id);
int add_node(graph *g, int id, edge_list *new_e_list);
int update_in_edges(graph *g, edge_list *new_e_list);
p_node search_n(p_graph g, int id);
int remove_node(graph *g, int id);
int add_edge(graph *g, int src, int w, int dest);
int add_Edge(graph *g, edge *e);
int remove_edge(graph *g, int src, int dest);
int free_graph(graph *g);
int print_graph(p_graph g);
}

class edge{
int src;
float w;
int dest;
edge *prev_e;
edge *next_e;
edge *gen_edge(int src_, float w_, int dest_);
int print_e(edge *e);
}

class node{
int id;
edge_list in_edges;
edge_list out_edges;
node *prev_n;
node *next_n;
Tag city;
node *gen_node(int id_);
int free_n_edges(node *n);
int free_n(node *n);
int print_node();
}

class algo{
void A(graph *g, char *input);
void B(graph *g, char *input);
void D(graph *g, char *input);
float Shortest_path(graph *g, char *input);
void TSP(graph *g, char *input);
}

class edge_list{
edge *e_root;
edge *e_tail;
int size;
p_e_list init_edge_list();
int set_e_root(p_e_list pe_list, edge *e);
int set_e_tail(p_e_list pe_list, edge *e);
p_edge search_e(p_e_list pe_list, edge *e);
void push_edge(p_e_list pe_list, edge *e);
void push_Edge(p_e_list pe_list, int src_, int w_, int dest_);
int pop_e_root(p_e_list pe_list);
int pop_e_tail(p_e_list pe_list);
int pop_e(p_e_list pe_list, edge *e_);
int free_edge_list(p_e_list pe_list);
int print_e_list(edge_list *e_list);
}

class PQ_{
p_node node_ptr;
pq *next;
pq *root;
pq *tail;
pq *gen(p_node n);
p_node peeq_n(pq **root);
p_node peeq_n_tail(pq **root);
int peeq_root_from_src(pq **root);
int peeq_tail_from_src(pq **root);
int pop(pq **root);
int push(pq **root, p_node n);
int is_empty(pq **root);
}
'class ?node_list?{
'node *n_root;
'node *n_tail;
'int size;
'int init_node_list(node_list *n_list);
'int set_n_root(node *n);
'int set_n_tail(node *n);
'int add_node(node_list *n_list, int id_);
'int remove_node(node_list *n_list, int id_);
'int free_node_list(node_list *n_list);
'}

@enduml